# kindle-vault-sync

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  config.example.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/kindle_vault_sync/: brief.py  cli.py  config.py  scanner.py  sender.py
src/kindle_vault_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_brief.py  test_config.py
