[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kindle-vault-sync"
version = "0.1.0"
description = "Configurable vault-to-Kindle digest sender"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Kindle Vault Sync Contributors" }
]
dependencies = []

[project.scripts]
kindle-vault-sync = "kindle_vault_sync.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
